Outputting the categories of the encoded data

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3566,6 +3566,27 @@
    "source": [
     "housing_cat_1hot.toarray()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['<1H OCEAN', 'INLAND', 'ISLAND', 'NEAR BAY', 'NEAR OCEAN'],\n",
+       "       dtype=object)]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_encoder.categories_"
+   ]
   }
  ],
  "metadata": {
