Long story short one hot encoder FUCKS!!!

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3655,6 +3655,27 @@
     "df_test = pd.DataFrame({\"ocean_proximity\": [\"INLAND\", \"NEAR BAY\"]})\n",
     "pd.get_dummies(df_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_encoder.transform(df_test).toarray()"
+   ]
   }
  ],
  "metadata": {
