Scaled the housing_num dataframe

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3836,6 +3836,32 @@
     "                         index=df_test_unknown.index\n",
     "                         )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Feature Scaling and Transformation</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_max_scaler = MinMaxScaler(feature_range=(-1, 1))\n",
+    "housing_num_min_max_scaled = min_max_scaler.fit_transform(housing_num)"
+   ]
   }
  ],
  "metadata": {
