--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3845,6 +3845,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Normalization</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
@@ -4095,6 +4102,76 @@
    ],
    "source": [
     "housing_num_min_max_scaled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Standardization</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "std_scaler = StandardScaler()\n",
+    "housing_num_std_scaled = std_scaler.fit_transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Radial Basis Function (RBF) shenanigans</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import rbf_kernel\n",
+    "\n",
+    "age_simil_35 = rbf_kernel(housing[['housing_median_age']], [[35]], gamma = 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Training the Data using Linear Regression</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_scaler = StandardScaler()\n",
+    "scaled_labels = target_scaler.fit_transform(housing_labels.to_frame())\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(housing[['median_income']], scaled_labels)\n",
+    "some_new_data = housing[['median_income']].iloc[:5]             # Let's pretend this is new data\n",
+    "\n",
+    "scaled_predictions = model.predict(some_new_data)\n",
+    "predictions = target_scaler.inverse_transform(scaled_predictions)"
    ]
   }
  ],
