Transform Target Regression shenanigans

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4173,6 +4173,29 @@
     "scaled_predictions = model.predict(some_new_data)\n",
     "predictions = target_scaler.inverse_transform(scaled_predictions)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Trained the model using Transformed Target Regression</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import TransformedTargetRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "model = TransformedTargetRegressor(regressor=LinearRegression(), transformer = StandardScaler())\n",
+    "\n",
+    "model.fit(housing[['median_income']], housing_labels)\n",
+    "\n",
+    "predictions = model.predict(some_new_data)"
+   ]
   }
  ],
  "metadata": {
