Defined the Standard Scaler Clone function

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4290,6 +4290,51 @@
     "ratio_transformer = FunctionTransformer(lambda X: X[:, [0]] / x[:, [1]])\n",
     "ratio_transformer.transform(np.array([[1., 2.], [3., 4.]]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>A custom transformer that acts like a StandardScaler</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.utils.validation import check_array, check_is_fitted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StandardScalerClone(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, with_mean=True):                 # No *args or **kwargs\n",
+    "        self.with_mean = with_mean\n",
+    "        \n",
+    "    def fit(self, X, y=None):                           # y is required even though we don't use it\n",
+    "        X = check_array(X)                              # Checks that x is an array with a finite float values\n",
+    "        self.mean_ = X.mean(axis=0)\n",
+    "        self.scale_ = X.std(axis=0)\n",
+    "        self.n_features_in_ = X.shape[1]                # Every estimator stores this in fit\n",
+    "        return self\n",
+    "    \n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        check_is_fitted(self)                           # Looks for learned attributes (with trailing _)\n",
+    "        X = check_array(X)\n",
+    "        assert self.n_features_in_ == X.shape[1]\n",
+    "\n",
+    "        if self.with_mean:\n",
+    "            X = X - self.mean_\n",
+    "        return X / self.scale_"
+   ]
   }
  ],
  "metadata": {
