--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2550,7 +2550,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_3236\\1819075236.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_2712\\1819075236.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -4300,7 +4300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4334,6 +4334,39 @@
     "        if self.with_mean:\n",
     "            X = X - self.mean_\n",
     "        return X / self.scale_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClusterSimilarity(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, n_clusters = 0, gamma = 1.0, random_state = None):\n",
+    "        self.n_clusters = n_clusters\n",
+    "        self.gamma = gamma\n",
+    "        self.random_state = random_state\n",
+    "\n",
+    "    def fit(self, X, y=None, sample_weight=None):\n",
+    "        self.kmeans_ = KMeans(self.n_clusters, random_state=self.random_state)\n",
+    "        self.kmeans_.fit(X, sample_weight=sample_weight)\n",
+    "        return self                                                         # Return self!\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        return rbf_kernel(X, self.kmeans_.cluster_centers_, gamma=self.gamma)\n",
+    "\n",
+    "    def get_feature_names_out(self, names=None):\n",
+    "        return [f\"Cluster {i} similarity\" for i in range(self.n_clusters)]"
    ]
   }
  ],
