Had to reimport some classes

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2550,7 +2550,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_2712\\1819075236.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_13652\\1819075236.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -4338,7 +4338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4347,10 +4347,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics.pairwise import rbf_kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
     "class ClusterSimilarity(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, n_clusters = 0, gamma = 1.0, random_state = None):\n",
     "        self.n_clusters = n_clusters\n",
@@ -4367,6 +4378,16 @@
     "\n",
     "    def get_feature_names_out(self, names=None):\n",
     "        return [f\"Cluster {i} similarity\" for i in range(self.n_clusters)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_simil = ClusterSimilarity(n_clusters=10, gamma=1, random_state=42)\n",
+    "similarities = cluster_simil.fit_transform(housing[['latitude', 'longitude']], sample_weight=housing_labels)"
    ]
   }
  ],
