--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4481,6 +4481,60 @@
     "housing_num_prepared = num_pipeline.fit_transform(housing_num)\n",
     "housing_num_prepared[:2].round(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Pipeline' object has no attribute 'get_featured_names_out'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[96], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m df_housing_num_prepared \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\n\u001b[0;32m      2\u001b[0m     housing_num_prepared,\n\u001b[1;32m----> 3\u001b[0m     columns \u001b[38;5;241m=\u001b[39m \u001b[43mnum_pipeline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_featured_names_out\u001b[49m(), \n\u001b[0;32m      4\u001b[0m     index\u001b[38;5;241m=\u001b[39mhousing_num\u001b[38;5;241m.\u001b[39mindex\n\u001b[0;32m      5\u001b[0m )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Pipeline' object has no attribute 'get_featured_names_out'"
+     ]
+    }
+   ],
+   "source": [
+    "df_housing_num_prepared = pd.DataFrame(\n",
+    "    housing_num_prepared,\n",
+    "    columns = num_pipeline.get_featured_names_out(), \n",
+    "    index=housing_num.index\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_attribs = ['longitude', 'latitude', 'housing_median_age', 'total_rooms', 'total_bedrooms', 'population', 'households', 'median_income']\n",
+    "cat_attribs = ['ocean_proximity']\n",
+    "\n",
+    "cat_pipeline = make_pipeline(\n",
+    "    SimpleImputer(strategy='most_frequent'),\n",
+    "    OneHotEncoder(handle_unknown=\"ignore\")\n",
+    ")\n",
+    "\n",
+    "preprocessing = ColumnTransformer([\n",
+    "    (\"num\", num_pipeline, num_attribs),\n",
+    "    (\"cat\", cat_pipeline, cat_attribs)\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
