--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2550,7 +2550,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_13652\\1819075236.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_2592\\1819075236.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -4338,7 +4338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4347,7 +4347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4356,7 +4356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4382,7 +4382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4399,7 +4399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4408,7 +4408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4417,7 +4417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4451,7 +4451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4462,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4484,7 +4484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4509,7 +4509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4518,7 +4518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4534,6 +4534,89 @@
     "    (\"num\", num_pipeline, num_attribs),\n",
     "    (\"cat\", cat_pipeline, cat_attribs)\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import make_column_selector, make_column_transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessing = make_column_transformer(\n",
+    "    (num_pipeline, make_column_selector(dtype_include=np.number)),\n",
+    "    (cat_pipeline, make_column_selector(dtype_include=object))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared = preprocessing.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'make_pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 15\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mratio_pipeline\u001b[39m():\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m make_pipeline(\n\u001b[0;32m     10\u001b[0m         SimpleImputer(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedian\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     11\u001b[0m         FunctionTransformer(column_ratio, feature_names_out\u001b[38;5;241m=\u001b[39mratio_name),\n\u001b[0;32m     12\u001b[0m         StandardScaler()\n\u001b[0;32m     13\u001b[0m     )\n\u001b[1;32m---> 15\u001b[0m log_pipeline \u001b[38;5;241m=\u001b[39m \u001b[43mmake_pipeline\u001b[49m(\n\u001b[0;32m     16\u001b[0m     SimpleImputer(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedian\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     17\u001b[0m     FunctionTransformer(np\u001b[38;5;241m.\u001b[39mlog, feature_names_out\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mone-to-one\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     18\u001b[0m     StandardScaler()\n\u001b[0;32m     19\u001b[0m )\n\u001b[0;32m     21\u001b[0m cluster_simil \u001b[38;5;241m=\u001b[39m ClusterSimilarity(n_clusters\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, gamma \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m     23\u001b[0m default_num_pipeline \u001b[38;5;241m=\u001b[39m make_pipeline(SimpleImputer(strategy\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedian\u001b[39m\u001b[38;5;124m'\u001b[39m), StandardScaler())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'make_pipeline' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "def column_ratio(X):\n",
+    "    return X[:, [0]] / X[:, [1]]\n",
+    "\n",
+    "def ratio_name(function_transformer, feature_names_in):\n",
+    "    return [\"ratio\"]                                    # Feature names out\n",
+    "\n",
+    "def ratio_pipeline():\n",
+    "    return make_pipeline(\n",
+    "        SimpleImputer(strategy=\"median\"),\n",
+    "        FunctionTransformer(column_ratio, feature_names_out=ratio_name),\n",
+    "        StandardScaler()\n",
+    "    )\n",
+    "    \n",
+    "log_pipeline = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"median\"),\n",
+    "    FunctionTransformer(np.log, feature_names_out=\"one-to-one\"),\n",
+    "    StandardScaler()\n",
+    ")\n",
+    "\n",
+    "cluster_simil = ClusterSimilarity(n_clusters=10, gamma = 1, random_state=42)\n",
+    "\n",
+    "default_num_pipeline = make_pipeline(SimpleImputer(strategy='median'), StandardScaler())\n",
+    "\n",
+    "preprocessing = ColumnTransformer([\n",
+    "    (\"bedrooms\", ratio_pipeline(), [\"total_rooms\", \"households\"]),\n",
+    "    (\"rooms_per_house\", ratio_pipeline(), [\"total_rooms\", \"population\"]),\n",
+    "    (\"people_per_house\", ratio_pipeline(), [\"population\", \"households\"]),\n",
+    "    (\"log\", log_pipeline, [\"total_bedrooms\", \"total_rooms\", \"population\", \"households\", \"median_income\"]),\n",
+    "    (\"geo\", cluster_simil, [\"latitude\", \"longitude\"]),\n",
+    "    (\"cat\", cat_pipeline, make_column_selector(dtype_include=object))\n",
+    "],\n",
+    "remainder = default_num_pipeline)"
    ]
   }
  ],
