Added some running code

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4618,6 +4618,39 @@
     "],\n",
     "remainder = default_num_pipeline)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import make_column_selector, make_column_transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'num_pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[81], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m preprocessing \u001b[38;5;241m=\u001b[39m make_column_transformer(\n\u001b[1;32m----> 2\u001b[0m     (\u001b[43mnum_pipeline\u001b[49m, make_column_selector(dtype_include\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mnumber)),\n\u001b[0;32m      3\u001b[0m     (cat_pipeline, make_column_selector(dtype_include\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mobject\u001b[39m))\n\u001b[0;32m      4\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'num_pipeline' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessing = make_column_transformer(\n",
+    "    (num_pipeline, make_column_selector(dtype_include=np.number)),\n",
+    "    (cat_pipeline, make_column_selector(dtype_include=object))\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
