--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4651,6 +4651,74 @@
     "    (cat_pipeline, make_column_selector(dtype_include=object))\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV \n",
+    "from scipy.stats import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'full_pipeline' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[84], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m param_distribs \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpreprocessing__geo__n_clusters\u001b[39m\u001b[38;5;124m'\u001b[39m: randint(low\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, high\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m), \n\u001b[0;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom_forest__max_features\u001b[39m\u001b[38;5;124m'\u001b[39m: randint(low\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, high\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m)\n\u001b[0;32m      4\u001b[0m }\n\u001b[0;32m      6\u001b[0m rnd_search \u001b[38;5;241m=\u001b[39m RandomizedSearchCV(\n\u001b[1;32m----> 7\u001b[0m     \u001b[43mfull_pipeline\u001b[49m,\n\u001b[0;32m      8\u001b[0m     param_distributions\u001b[38;5;241m=\u001b[39mparams_distribs,\n\u001b[0;32m      9\u001b[0m     n_inter\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m,\n\u001b[0;32m     10\u001b[0m     cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m,\n\u001b[0;32m     11\u001b[0m     scoring\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnet_root_mean_squared_error\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     12\u001b[0m     random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m\n\u001b[0;32m     13\u001b[0m )\n\u001b[0;32m     15\u001b[0m rnd_search\u001b[38;5;241m.\u001b[39mfit(housing, housing_labels)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'full_pipeline' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "param_distribs = {\n",
+    "    'preprocessing__geo__n_clusters': randint(low=3, high=50), \n",
+    "    'random_forest__max_features': randint(low=2, high=20)\n",
+    "}\n",
+    "\n",
+    "rnd_search = RandomizedSearchCV(\n",
+    "    full_pipeline,\n",
+    "    param_distributions=params_distribs,\n",
+    "    n_inter=10,\n",
+    "    cv=3,\n",
+    "    scoring='net_root_mean_squared_error',\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "rnd_search.fit(housing, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rnd_search' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[85], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m final_model \u001b[38;5;241m=\u001b[39m \u001b[43mrnd_search\u001b[49m\u001b[38;5;241m.\u001b[39mbest_estimator_                        \u001b[38;5;66;03m# Includes preprocessing\u001b[39;00m\n\u001b[0;32m      2\u001b[0m feature_importances \u001b[38;5;241m=\u001b[39m final_model[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom_forest\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mfeature_importances_\n\u001b[0;32m      3\u001b[0m feature_importances\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rnd_search' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "final_model = rnd_search.best_estimator_                        # Includes preprocessing\n",
+    "feature_importances = final_model['random_forest'].feature_importances_\n",
+    "feature_importances.round(2)"
+   ]
   }
  ],
  "metadata": {
