--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4719,6 +4719,29 @@
     "feature_importances = final_model['random_forest'].feature_importances_\n",
     "feature_importances.round(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'feature_importances' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[86], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[43mfeature_importances\u001b[49m,\n\u001b[0;32m      2\u001b[0m             final_model[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpreprocessing\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mget_feature_names_out()),\n\u001b[0;32m      3\u001b[0m             reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'feature_importances' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sorted(zip(feature_importances,\n",
+    "            final_model['preprocessing'].get_feature_names_out()),\n",
+    "            reverse=True)"
+   ]
   }
  ],
  "metadata": {
