--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4742,6 +4742,37 @@
     "            final_model['preprocessing'].get_feature_names_out()),\n",
     "            reverse=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Evaluating A System on A Test Set</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'final_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m x_test \u001b[38;5;241m=\u001b[39m strat_test_set\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedian_house_value\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      2\u001b[0m y_test \u001b[38;5;241m=\u001b[39m strat_test_set[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedian_house_value\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 4\u001b[0m final_predictions \u001b[38;5;241m=\u001b[39m \u001b[43mfinal_model\u001b[49m\u001b[38;5;241m.\u001b[39mpredict(x_test)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'final_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x_test = strat_test_set.drop('median_house_value', axis=1)\n",
+    "y_test = strat_test_set['median_house_value'].copy()\n",
+    "\n",
+    "final_predictions = final_model.predict(x_test)"
+   ]
   }
  ],
  "metadata": {
