--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -4775,6 +4775,69 @@
     "final_rmse = mean_squared_error(y_test, final_predictions, squared-False)\n",
     "print(final_rmse)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'final_predictions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[91], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stats\n\u001b[0;32m      2\u001b[0m confidence \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.95\u001b[39m\n\u001b[1;32m----> 3\u001b[0m squared_errors \u001b[38;5;241m=\u001b[39m (\u001b[43mfinal_predictions\u001b[49m \u001b[38;5;241m-\u001b[39m y_test) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m      4\u001b[0m np\u001b[38;5;241m.\u001b[39msqrt(stats\u001b[38;5;241m.\u001b[39mt\u001b[38;5;241m.\u001b[39minterval(confidence, \u001b[38;5;28mlen\u001b[39m(square_errors) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m, \n\u001b[0;32m      5\u001b[0m                          loc\u001b[38;5;241m=\u001b[39msquare_errors\u001b[38;5;241m.\u001b[39mmean(),\n\u001b[0;32m      6\u001b[0m                          scale\u001b[38;5;241m=\u001b[39mstats\u001b[38;5;241m.\u001b[39msem(squared_errors)))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'final_predictions' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "confidence = 0.95\n",
+    "squared_errors = (final_predictions - y_test) ** 2\n",
+    "np.sqrt(stats.t.interval(confidence, len(square_errors) - 1, \n",
+    "                         loc=square_errors.mean(),\n",
+    "                         scale=stats.sem(squared_errors)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h5>Launch , Monitor and Maintain your System</h5>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'final_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[93], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m joblib\u001b[38;5;241m.\u001b[39mdump(\u001b[43mfinal_model\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmy_california_housing_model.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'final_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "joblib.dump(final_model, \"my_california_housing_model.pkl\")"
+   ]
   }
  ],
  "metadata": {
