Divided the data into training and test sets for both the X and y

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -182,6 +182,35 @@
    "source": [
     "y[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = X[:60000], X[60000:], y[:60000], y[60000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((60000, 784), (10000, 784))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, X_test.shape"
+   ]
   }
  ],
  "metadata": {
