--- a/classification.ipynb
+++ b/classification.ipynb
@@ -211,6 +211,23 @@
    "source": [
     "X_train.shape, X_test.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Training a Binary Classifier</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_5 = (y_train == '5')\n",
+    "y_test_5 = (y_test == '5')"
+   ]
   }
  ],
  "metadata": {
