Imported the SGDClassifier

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -221,12 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train_5 = (y_train == '5')\n",
     "y_test_5 = (y_test == '5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier"
    ]
   }
  ],
