Measuring accuracy using cross validation

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -685,6 +685,42 @@
    "source": [
     "sgd_clf.predict([some_digit])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Measuring Accuracy Using Cross Validation</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.95035, 0.96035, 0.9604 ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(sgd_clf, X_train, y_train_5, cv=3, scoring='accuracy')"
+   ]
   }
  ],
  "metadata": {
