Using the trained classifier on a dummy data set and printing out the performance score of the DummyClaffisier

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -721,6 +721,54 @@
    "source": [
     "cross_val_score(sgd_clf, X_train, y_train_5, cv=3, scoring='accuracy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.dummy import DummyClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy_clf = DummyClassifier()\n",
+    "dummy_clf.fit(X_train, y_train_5)\n",
+    "print(any(dummy_clf.predict(X_train)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.90965, 0.90965, 0.90965])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(dummy_clf, X_train, y_train_5, cv=3, scoring='accuracy')"
+   ]
   }
  ],
  "metadata": {
