--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1111,6 +1111,71 @@
     "plt.plot(recalls, precisions, linewidth=2, label=\"Precision/Recall Curve\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3370.0194991439557"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx_for_90_precision = (precisions >= 0.90).argmax()\n",
+    "threshold_for_90_precision = thresholds[idx_for_90_precision]\n",
+    "threshold_for_90_precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, ...,  True, False, False])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_pred_90 = (y_scores >= threshold_for_90_precision)\n",
+    "y_train_pred_90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4799852425751706"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_train_5, y_train_pred_90)\n",
+    "recall_at_90_precision = recall_score(y_train_5, y_train_pred_90)\n",
+    "recall_at_90_precision"
+   ]
   }
  ],
  "metadata": {
