Did some more stuff

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1783,6 +1783,48 @@
     "plt.plot(recalls, precisions, \"--\", linewidth=2, label=\"SGD\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_pred_forest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[63], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m y_train_pred_forest \u001b[38;5;241m=\u001b[39m y_probas_forest[:, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m                      \u001b[38;5;66;03m# Positive proba >= 50%\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m f1_score(y_train_5, \u001b[43my_pred_forest\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_pred_forest' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "y_train_pred_forest = y_probas_forest[:, 1] >= 0.5                      # Positive proba >= 50%\n",
+    "f1_score(y_train_5, y_pred_forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9983436731328145"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_train_5, y_scores_forest)"
+   ]
   }
  ],
  "metadata": {
